always show scrollbar to avoid jumping

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,7 +2,9 @@
 @import 'ember-paper';
 @import 'paper-data-table';
 
-
+html {
+  overflow-y: scroll;
+}
 .md-table {
   width: 90% !important;
   margin: 3% auto;
